@@ -1,0 +1,25 @@
+--- #YAML:1.0
+name:               DateTime-Calendar-Hebrew
+version:            0.05
+abstract:           Dates in the Hebrew calendar
+author:
+    - Steven J. Weinberger <perl@psycomp.com>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    DateTime:             0
+    DateTime::Duration:   0
+    DateTime::Event::Sunrise:  0
+    DateTime::TimeZone::Floating:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
